Update: style- * bring hovered `.tipped` elements to front, so as to prevent unhover if edge is overlapped * for `.tip`s, set editor form to take up entire width * lists:   * add small margin to right of all `dt`s (for `.note`s, among other things)   * don't remove `li`  markers (so as not to affect `ol li`)   * remove site's bottom margin for lists   * restore list markers for `ul` in `.notes`   * restore padding for `ul, ol` in `.notes`   * position markers outside `li`

--- a/style/material.css
+++ b/style/material.css
@@ -4,9 +4,12 @@
 
 /** site & browser style overrides */
 
+.mll_sheet ul {
+	list-style-type: none;
+}
+
 .mll_sheet ul,
 .mll_sheet li {
-	list-style-type: none;
 	padding: 0;
 	margin: 0;
 }
@@ -27,6 +30,11 @@
 
 .mll_sheet .dsf form {
 	display: inline-block;
+}
+
+.mll_sheet .tip .dsf form,
+.mll_sheet .tip.dsf form {
+	width: 100%;
 }
 
 
@@ -154,6 +162,10 @@
 
 .mll_sheet .tipped {
 	position: relative;
+}
+
+.mll_sheet .tipped:hover {
+	z-index: 1;
 }
 
 .mll_sheet .tip {
